fix spacing of codeblocks

--- a/css/main.less
+++ b/css/main.less
@@ -60,6 +60,7 @@ div.highlight, code {
 div.highlight {
   padding: 15px;
   border-radius: 3px;
+  margin-bottom: 20px;
 
   code {
     font-size: 120%;
@@ -67,7 +68,7 @@ div.highlight {
 }
 
 code {
-  padding: 4px;
+  padding: 3px 4px;
   border-radius: 2px;
   font-size: 100%;
   line-height: 170%;
